# check-commits

./: Cargo.toml  README.md  test-emails-1.txt  test-emails-2.txt  test-emails-3.txt  test-emails-4.txt  test-mx-record.txt  test-rules.txt
.github/workflows/: ci.yml
src/: main.rs
