[package]
name = "check-commits-email"
version = "0.1.1"
edition = "2024"
description = "Git commit email validator --- Validate git commit emails against wildcard rules "
license = "AGPL-3.0-or-later"
repository = "https://github.com/Itsusinn/check-commits-email"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
anyhow = "1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
bin-dir = "{ name }-{ target }{ binary-ext }"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]